<resources>
    <string name="app_name">a</string>
    <string name="consumo">Consumo</string>
    <string name="facturas">Facturas</string>
    <string name="fecha_emision">Con fecha de emisión</string>
    <string name="filtrar_facturas">Filtrar facturas</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="dia_mes_anho">Día/mes/año</string>
    <string name="por_importe">Por importe</string>
    <string name="por_filtro">Por filtro</string>
    <string name="filtro_pagadas">Pagadas</string>
    <string name="filtro_anuladas">Anuladas</string>
    <string name="filtro_cuota_fija">Cuota Fija</string>
    <string name="filtro_pendientes">Pendientes de pago</string>
    <string name="filtro_plan_de_pago">Plan de pago</string>
    <string name="aplicar">Aplicar filtros</string>
    <string name="eliminar_filtros">Eliminar filtros</string>
    <string name="pagadas">Pagadas</string>
    <string name="euro">\u20AC</string>
    <string name="informacion">Información</string>
    <string name="no_disponible">Esta funcionalidad no está disponible</string>
    <string name="cerrar">Cerrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_smart_solar">SmartSolar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="atras">Atrás</string>
    <string name="mi_instalacion">Mi instalación</string>
    <string name="energia">Energía</string>
    <string name="detalles">Detalles</string>
    <string name="infoFragmentEnergia">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real.</string>
    <string name="autoconsumo">Autoconsumo: 92%</string>
    <string name="smart_solar">Smart Solar</string>
    <string name="smart_solar_energia">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu producción solar. Sentimos las molestias.</string>
    <string name="lista_de_facturas">Lista de facturas</string>

</resources>